# MarketBasket

./: .gitignore  README.md  pyproject.toml
docs/: app.js  index.html  style.css  wrangler.jsonc
docs/data/: AZ.parquet  IL.parquet  IN.parquet  TN.parquet  TX.parquet  index.json
site/: app.js
site/data/: AZ.parquet  IL.parquet  TN.parquet
src/marketbasket/: __init__.py  aggregate.py  config.py  preprocess.py  refresh.py  refresh_local.py  sql.py
